# wasmPolyBench

./: 2DConvolution.wasm  CMakeLists.txt  CmakeLists.txt  CopyOfCMakeCache.txt  Makefile  README.md  cmake_install.cmake
include/: jacobi1D.h  jacobi2D.h  lu.h  polybench.c  polybench.h
ptx/: 2DConvolution.ptx  2mm.ptx  3DConvolution.ptx  3mm.ptx  adi.ptx  atax.ptx  bicg.ptx  correlation.ptx  covariance.ptx  doitgen.ptx  fdtd2d.ptx  gemm.ptx  gemver.ptx  gesummv.ptx  gramschmidt.ptx  jacobi1D.ptx  jacobi2D.ptx  lu.ptx  mvt.ptx  syr2k.ptx  syrk.ptx
src/: 2DConvolution.c  2mm.c  3DConvolution.c  3mm.c  adi.c  atax.c  bicg.c  correlation.c  covariance.c  doitgen.c  fdtd2d.c  gemm.c  gemver.c  gesummv.c  gramschmidt.c  jacobi1D.c  jacobi2D.c  lu.c  mvt.c  syr2k.c  syrk.c
